<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.codesparts.toastappclient.activity.auth.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:weightSum="1">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.codesparts.toastappclient.custom.CustomFontEditText
                android:id="@+id/email"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                app:font="@string/font_name"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.codesparts.toastappclient.custom.CustomFontEditText
                android:id="@+id/password"
                android:textSize="20sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                app:font="@string/font_name"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <com.codesparts.toastappclient.custom.CustomFontButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_login"
            app:font="@string/font_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <com.codesparts.toastappclient.custom.CustomFontButton
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="21dp"
            android:layout_marginTop="20dp"
            app:font="@string/font_name"
            android:background="@null"
            android:textSize="18sp"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <com.codesparts.toastappclient.custom.CustomFontButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            app:font="@string/font_name"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:textSize="18sp"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>