<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_marginEnd="15dp"
    android:layout_marginStart="15dp"
    tools:context="com.codesparts.toastappclient.activity.auth.SignUpActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_chef"
            android:id="@+id/imageLogo"
            android:paddingBottom="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.codesparts.toastappclient.custom.CustomFontEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Full Name"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:font="@string/font_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.codesparts.toastappclient.custom.CustomFontEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:font="@string/font_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.codesparts.toastappclient.custom.CustomFontEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:textSize="20sp"
                android:imeActionId="@+id/login"
                app:font="@string/font_name"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <com.codesparts.toastappclient.custom.CustomFontButton
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            app:font="@string/font_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp"/>

        <com.codesparts.toastappclient.custom.CustomFontButton
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="23dp"
            android:layout_marginTop="20dip"
            android:background="@null"
            app:font="@string/font_name"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <com.codesparts.toastappclient.custom.CustomFontButton
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="33dp"
            android:layout_marginTop="20dip"
            android:background="@null"
            app:font="@string/font_name"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>